Ellipses on text to prevent overflow or wrapping in listing

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -100,6 +100,11 @@ header {
         .title {
             @include media(">=tablet") {
                 float: left;
+                white-space: nowrap;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 80%;
             }
             font-family: $scaryFont;
             word-break: break-word;
